@@ -95,6 +95,8 @@ clicked on menu item.
 
 * Improved modules.json.
 
+* Added migrate plugin for jquery.
+
 
 2012.12.12, Version 0.1.8
 
